# my-openenv

./: .gitignore  Dockerfile  FINAL_VALIDATION.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  SPEC.md  SUBMISSION_READY.md  client.py  debug_ranking.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  README.md  app.py  environment.py  graders.py  pyproject.toml  requirements.txt
server/scenarios/: generator.py  templates.py
tests/: test_contracts.py  test_edge_cases.py  test_environment.py
